Tile map loading works. Tile collisions will work, but not currently in gameutils.

--- a/build.gradle
+++ b/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     implementation 'com.android.support:support-annotations:27.0.2'
     compile 'org.jetbrains:annotations-java5:15.0'
     //compile project(path: ':interpolation')
+    testCompile 'junit:junit:4.12'
 }
