--- a/build.gradle
+++ b/build.gradle
@@ -22,17 +22,17 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     /*
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     */
     //annotationProcessor project(path: ':interpolation')
-    compile 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
     //testCompile 'junit:junit:4.12'
     implementation 'com.android.support:support-annotations:27.0.2'
-    compile 'org.jetbrains:annotations-java5:15.0'
+    implementation 'org.jetbrains:annotations-java5:15.0'
     //compile project(path: ':interpolation')
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 }
