Return after a long break

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,2 +1,4 @@
-<manifest package="box.gift.gameutils">
+<manifest package="box.gift.gameutils"
+          xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.VIBRATE" />
 </manifest>
